# altlinux-freedesktop-menu

./: alt-fd-menu.spec
.gear/: rules
altlinux-freedesktop-menu/: AUTHORS  Makefile.am  alt-fd-menu.spec  altlinux-freedesktop-menu-post.sh  altlinux-freedesktop-menu.filetrigger  configure.ac  mkdist.sh
altlinux-freedesktop-menu/altlinux-directories/: altlinux-main.directory  altlinux-settings.directory
altlinux-freedesktop-menu/desktop-directories/: Makefile.am  altlinux-adult.directory.in  altlinux-amusement.directory.in  altlinux-applications.directory.in  altlinux-artificialintelligence.directory.in  altlinux-astronomy.directory.in  altlinux-audiovideo-audio-player.directory.in  altlinux-audiovideo-audio-recorder.directory.in  altlinux-audiovideo-audiovideoediting.directory.in  altlinux-audiovideo-discburning.directory.in  altlinux-audiovideo-mixer.directory.in  altlinux-audiovideo-other.directory.in  altlinux-audiovideo-player.directory.in  altlinux-audiovideo-recorder.directory.in  altlinux-audiovideo-sequencer.directory.in  altlinux-audiovideo-video-player.directory.in  altlinux-audiovideo-video-recorder.directory.in  altlinux-audiovideo-video.directory.in  altlinux-biology.directory.in  altlinux-chemistry.directory.in  altlinux-computerscience.directory.in  altlinux-data-visualization.directory.in  altlinux-development-building.directory.in  altlinux-development-database.directory.in  altlinux-development-debugging.directory.in  altlinux-development-ide.directory.in  altlinux-development-interfacedesign.directory.in  altlinux-development-other.directory.in  altlinux-development-profiling.directory.in  altlinux-development-projectmanagement.directory.in  altlinux-development-revision-control.directory.in  altlinux-development-translation.directory.in  altlinux-development-webdevelopment.directory.in  altlinux-development.directory.in  altlinux-documentation.directory.in  altlinux-education-art.directory.in  altlinux-education-artificial-intelligence.directory.in  altlinux-education-astronomy.directory.in  altlinux-education-biology.directory.in  altlinux-education-chemistry.directory.in  (+212 more)
altlinux-freedesktop-menu/desktop-directories-kde4/: Makefile.am  altlinux-adult.directory.in  altlinux-amusement.directory.in  altlinux-applications.directory.in  altlinux-artificialintelligence.directory.in  altlinux-astronomy.directory.in  altlinux-audiovideo-audio-recorder.directory.in  altlinux-audiovideo-mixer.directory.in  altlinux-audiovideo-other.directory.in  altlinux-audiovideo-recorder.directory.in  altlinux-audiovideo-sequencer.directory.in  altlinux-audiovideo-tuner.directory.in  altlinux-audiovideo-tv-and-radio.directory.in  altlinux-audiovideo-tv.directory.in  altlinux-audiovideo-video-audiovideoediting.directory.in  altlinux-audiovideo-video-recorder.directory.in  altlinux-audiovideo-video.directory.in  altlinux-computer-science.directory.in  altlinux-development-building.directory.in  altlinux-development-debugger.directory.in  altlinux-development-ide.directory.in  altlinux-development-interfacedesign.directory.in  altlinux-development-other.directory.in  altlinux-development-profiling.directory.in  altlinux-development-revisioncontrol.directory.in  altlinux-development-translation.directory.in  altlinux-development.directory.in  altlinux-documentation.directory.in  altlinux-education-art.directory.in  altlinux-education-biology.directory.in  altlinux-education-computerscience-typing.directory.in  altlinux-education-computerscience.directory.in  altlinux-education-construction.directory.in  altlinux-education-economy.directory.in  altlinux-education-electricity.directory.in  altlinux-education-geography.directory.in  altlinux-education-geology.directory.in  altlinux-education-geoscience.directory.in  altlinux-education-history.directory.in  altlinux-education-humanities.directory.in  (+149 more)
altlinux-freedesktop-menu/gnome/: gnome-applications.menu
altlinux-freedesktop-menu/gnome/desktop-directories/: AudioVideo.directory  Development.directory  Education.directory  Game.directory  Graphics.directory  Hardware.directory  InternetAndNetwork.directory  LookAndFeel.directory  Network.directory  Office.directory  Personal.directory  Settings-System.directory  Settings.directory  System-Tools.directory  System.directory  Utility-Accessibility.directory  Utility.directory  X-GNOME-Menu-Applications.directory  X-GNOME-Menu-System.directory  X-GNOME-Other.directory
altlinux-freedesktop-menu/layout/: Makefile.am  altlinux-applications-mate-like.menu  altlinux-applications-nested.menu  altlinux-applications-shallow-gnomish.menu  altlinux-applications-shallow.menu  altlinux-development.menu  altlinux-education.menu  altlinux-games.menu  altlinux-graphics.menu  altlinux-multimedia.menu  altlinux-network.menu  altlinux-office.menu  altlinux-science.menu  altlinux-settings.menu  altlinux-system.menu  altlinux-utility.menu  applications.menu  cinnamon-applications.menu  cinnamon-settings.menu  enlightenment-applications.menu  enlightenment.menu  gnome-applications.menu  gnome2-merged.menu  gnome3-applications.menu  kde3-applications.menu  kde4-applications.menu  kde4-merged.menu  lxde-applications.menu  mate-applications.menu  mate-settings.menu  settings.menu  xfce-applications.menu
altlinux-freedesktop-menu/po/: LINGUAS  POTFILES.in  af.po  alt-fd-menu.pot  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  (+62 more)
