NULL = 

@INTLTOOL_DIRECTORY_RULE@
directorydir = $(datadir)/kde4/desktop-directories
directory_in_files =			\
	altlinux-game.directory.in		\
	altlinux-game-other.directory.in		\
	altlinux-game-arcade.directory.in		\
	altlinux-game-board.directory.in		\
	altlinux-game-card.directory.in		\
	altlinux-game-strategy.directory.in		\
	altlinux-game-logic.directory.in		\
	altlinux-game-sports.directory.in		\
	altlinux-game-adventure.directory.in		\
	altlinux-amusement.directory.in		\
	altlinux-game-kids.directory.in		\
	altlinux-game-roleplaying.directory.in		\
	altlinux-game-action.directory.in		\
	altlinux-game-blocks.directory.in		\
	altlinux-game-simulation.directory.in		\
	altlinux-game-emulator.directory.in		\
	altlinux-network.directory.in		\
	altlinux-network-other.directory.in		\
	altlinux-network-webbrowser.directory.in		\
	altlinux-network-chat.directory.in		\
	altlinux-network-instantmessaging.directory.in		\
	altlinux-network-ircclient.directory.in		\
	altlinux-network-communication.directory.in		\
	altlinux-network-hamradio.directory.in		\
	altlinux-network-dialup.directory.in		\
	altlinux-network-email.directory.in		\
	altlinux-network-news.directory.in		\
	altlinux-network-filetransfer.directory.in		\
	altlinux-network-remoteaccess.directory.in		\
	altlinux-network-p2p.directory.in		\
	altlinux-network-telephony.directory.in		\
	altlinux-network-telephonytools.directory.in		\
	altlinux-network-videoconference.directory.in		\
	altlinux-network-webdevelopment.directory.in		\
	altlinux-office.directory.in		\
	altlinux-office-other.directory.in		\
	altlinux-office-publishing.directory.in		\
	altlinux-office-viewer.directory.in		\
	altlinux-office-calendar.directory.in		\
	altlinux-office-finance.directory.in		\
	altlinux-office-presentation.directory.in		\
	altlinux-office-spreadsheet.directory.in		\
	altlinux-office-wordprocessor.directory.in		\
	altlinux-office-database.directory.in		\
	altlinux-office-email.directory.in		\
	altlinux-office-projectmanagement.directory.in		\
	altlinux-office-pda.directory.in		\
	altlinux-office-contactmanagement.directory.in		\
	altlinux-office-dictionary.directory.in		\
	altlinux-office-chart.directory.in		\
	altlinux-office-flowchart.directory.in		\
	altlinux-office-photography.directory.in		\
	altlinux-science.directory.in		\
	altlinux-science-other.directory.in		\
	altlinux-science-astronomy.directory.in		\
	altlinux-science-biology.directory.in		\
	altlinux-science-chemistry.directory.in		\
	altlinux-science-computerscience.directory.in		\
	altlinux-science-geoscience.directory.in		\
	altlinux-science-math.directory.in		\
	altlinux-science-physics.directory.in		\
	altlinux-science-geology.directory.in		\
	altlinux-science-artificialintelligence.directory.in		\
	altlinux-science-electricity.directory.in		\
	altlinux-science-datavisualization.directory.in		\
	altlinux-science-imageprocessing.directory.in		\
	altlinux-science-numericalanalysis.directory.in		\
	altlinux-science-robotics.directory.in		\
	altlinux-science-parallelcomputing.directory.in		\
	altlinux-science-medicalsoftware.directory.in		\
	altlinux-development.directory.in		\
	altlinux-development-other.directory.in		\
	altlinux-development-webdevelopment.directory.in		\
	altlinux-development-database.directory.in		\
	altlinux-development-debugger.directory.in		\
	altlinux-development-ide.directory.in		\
	altlinux-development-building.directory.in		\
	altlinux-development-profiling.directory.in		\
	altlinux-development-revisioncontrol.directory.in		\
	altlinux-development-guidesigner.directory.in		\
	altlinux-development-translation.directory.in		\
	altlinux-development-projectmanagement.directory.in		\
	altlinux-audiovideo.directory.in		\
	altlinux-audiovideo-other.directory.in		\
	altlinux-audiovideo-audio.directory.in		\
	altlinux-audiovideo-video.directory.in		\
	altlinux-audiovideo-midi.directory.in		\
	altlinux-audiovideo-mixer.directory.in		\
	altlinux-audiovideo-sequencer.directory.in		\
	altlinux-audiovideo-database.directory.in		\
	altlinux-audiovideo-music.directory.in		\
	altlinux-audiovideo-audio-player.directory.in		\
	altlinux-audiovideo-video-player.directory.in		\
	altlinux-audiovideo-player.directory.in		\
	altlinux-audiovideo-audio-recorder.directory.in		\
	altlinux-audiovideo-video-recorder.directory.in		\
	altlinux-audiovideo-recorder.directory.in		\
	altlinux-audiovideo-tuner.directory.in		\
	altlinux-audiovideo-tv.directory.in		\
	altlinux-network-hamradio.directory.in		\
	altlinux-audiovideo-audio-audiovideoediting.directory.in		\
	altlinux-audiovideo-video-audiovideoediting.directory.in		\
	altlinux-audiovideo-audiovideoediting.directory.in		\
	altlinux-audiovideo-discburning.directory.in		\
	altlinux-graphics.directory.in		\
	altlinux-graphics-other.directory.in		\
	altlinux-graphics-2dgraphics.directory.in		\
	altlinux-graphics-3dgraphics.directory.in		\
	altlinux-graphics-vectorgraphics.directory.in		\
	altlinux-graphics-rastergraphics.directory.in		\
	altlinux-graphics-publishing.directory.in		\
	altlinux-graphics-scanning.directory.in		\
	altlinux-graphics-scanning-ocr.directory.in		\
	altlinux-graphics-photography.directory.in		\
	altlinux-graphics-viewer.directory.in		\
	altlinux-electronics.directory.in		\
	altlinux-engineering.directory.in		\
	altlinux-education.directory.in		\
	altlinux-education-other.directory.in		\
	altlinux-education-teaching.directory.in		\
	altlinux-education-languages.directory.in		\
	altlinux-education-math.directory.in		\
	altlinux-education-science.directory.in		\
	altlinux-education-astronomy.directory.in		\
	altlinux-education-biology.directory.in		\
	altlinux-education-chemistry.directory.in		\
	altlinux-education-computerscience.directory.in		\
	altlinux-education-geoscience.directory.in		\
	altlinux-education-physics.directory.in		\
	altlinux-education-geology.directory.in		\
	altlinux-education-music.directory.in		\
	altlinux-education-art.directory.in		\
	altlinux-education-history.directory.in		\
	altlinux-education-literature.directory.in		\
	altlinux-education-geography.directory.in		\
	altlinux-education-sports.directory.in		\
	altlinux-education-electricity.directory.in		\
	altlinux-education-construction.directory.in		\
	altlinux-education-economy.directory.in		\
	altlinux-education-robotics.directory.in		\
	altlinux-education-artificialintelligence.directory.in		\
	altlinux-education-datavisualization.directory.in		\
	altlinux-education-imageprocessing.directory.in		\
	altlinux-education-numerical-analysis.directory.in		\
	altlinux-education-medicalsoftware.directory.in		\
	altlinux-education-parallelcomputing.directory.in		\
	altlinux-education-computerscience-typing.directory.in		\
	altlinux-utility.directory.in		\
	altlinux-utility-desktop.directory.in		\
	altlinux-utility-other.directory.in		\
	altlinux-utility-filetools.directory.in		\
	altlinux-utility-archiving.directory.in		\
	altlinux-utility-archiving-compression.directory.in		\
	altlinux-utility-archiving-backup.directory.in		\
	altlinux-utility-texttools.directory.in		\
	altlinux-utility-texteditor.directory.in		\
	altlinux-utility-accessibility.directory.in		\
	altlinux-utility-telephonytools.directory.in		\
	altlinux-utility-calculator.directory.in		\
	altlinux-utility-clock.directory.in		\
	altlinux-system.directory.in		\
	altlinux-system-other.directory.in		\
	altlinux-system-emulator.directory.in		\
	altlinux-system-filetools.directory.in		\
	altlinux-system-filemanager.directory.in		\
	altlinux-system-filesystem.directory.in		\
	altlinux-system-monitor.directory.in		\
	altlinux-system-terminalemulator.directory.in		\
	altlinux-system-security.directory.in		\
	altlinux-settings-desktop.directory.in		\
	altlinux-settings-other.directory.in		\
	altlinux-settings-package-manager.directory.in		\
	altlinux-settings-hardware-settings.directory.in		\
	altlinux-settings-hardware-settings-printing.directory.in		\
	altlinux-settings-accessibility.directory.in		\
	altlinux-settings-security.directory.in		\
	altlinux-settings-network.directory.in		\
	altlinux-settings-system.directory.in		\
	altlinux-settings-desktop-settings.directory.in		\
	altlinux-settings-personal.directory.in		\
	altlinux-preferences.directory.in		\
	altlinux-documentation.directory.in		\
	altlinux-artificial-intelligence.directory.in		\
	altlinux-electricity.directory.in		\
	altlinux-data-visualization.directory.in		\
	altlinux-image-processing.directory.in		\
	altlinux-numerical-analysis.directory.in		\
	altlinux-robotics.directory.in		\
	altlinux-parallel-computing.directory.in		\
	altlinux-mathematics.directory.in		\
	altlinux-astronomy.directory.in		\
	altlinux-biology.directory.in		\
	altlinux-chemistry.directory.in		\
	altlinux-computer-science.directory.in		\
	altlinux-geoscience.directory.in		\
	altlinux-physics.directory.in		\
	altlinux-geology.directory.in		\
	altlinux-music.directory.in		\
	altlinux-photography.directory.in		\
	altlinux-viewer.directory.in		\
	altlinux-webdevelopment.directory.in		\
	altlinux-ham-radio.directory.in		\
	altlinux-telephonytools.directory.in		\
	altlinux-email.directory.in		\
	altlinux-database.directory.in		\
	altlinux-publishing.directory.in		\
	altlinux-projectmanagement.directory.in		\
	altlinux-filetools.directory.in		\
	altlinux-security.directory.in		\
	altlinux-other.directory.in		\
	altlinux-applications.directory.in		\
	altlinux-screensaver.directory.in		\
	altlinux-java.directory.in		\
	altlinux-xfce.directory.in		\
	altlinux-gnome.directory.in		\
	altlinux-mate.directory.in		\
	altlinux-kde.directory.in		\
	altlinux-lxde.directory.in		\
	altlinux-rox.directory.in		\
	altlinux-enlightenment.directory.in		\
	altlinux-audiovideo-tv-and-radio.directory.in		\
	altlinux-internet.directory.in		\
	altlinux-settings-java.directory.in		\
	altlinux-settings-xfce.directory.in		\
	altlinux-settings-gnome.directory.in		\
	altlinux-settings-mate.directory.in		\
	altlinux-settings-kde.directory.in		\
	altlinux-settings-lxde.directory.in		\
	altlinux-settings-rox.directory.in		\
	altlinux-system-tools.directory.in		\
	$(NULL)

directory_DATA = $(directory_in_files:.directory.in=.directory)

EXTRA_DIST= $(directory_in_files)

DISTCLEANFILES = $(directory_DATA)
