NULL = 

@INTLTOOL_DIRECTORY_RULE@
directorydir = $(datadir)/desktop-directories
directory_in_files =			\
	altlinux-game.directory.in		\
	altlinux-game-other.directory.in		\
	altlinux-game-arcade.directory.in		\
	altlinux-game-board.directory.in		\
	altlinux-game-card.directory.in		\
	altlinux-game-strategy.directory.in		\
	altlinux-game-logic.directory.in		\
	altlinux-game-sports.directory.in		\
	altlinux-game-adventure.directory.in		\
	altlinux-amusement.directory.in		\
	altlinux-game-kids.directory.in		\
	altlinux-game-roleplaying.directory.in		\
	altlinux-game-action.directory.in		\
	altlinux-game-blocks.directory.in		\
	altlinux-game-simulation.directory.in		\
	altlinux-game-emulator.directory.in		\
	altlinux-network.directory.in		\
	altlinux-network-other.directory.in		\
	altlinux-network-webbrowser.directory.in		\
	altlinux-network-chat.directory.in		\
	altlinux-network-mail.directory.in		\
	altlinux-network-news.directory.in		\
	altlinux-network-file-transfer.directory.in		\
	altlinux-network-remote-access.directory.in		\
	altlinux-network-instant-messaging.directory.in		\
	altlinux-network-irc.directory.in		\
	altlinux-network-communication.directory.in		\
	altlinux-network-ham-radio.directory.in		\
	altlinux-network-dialup.directory.in		\
	altlinux-network-p2p.directory.in		\
	altlinux-network-telephony.directory.in		\
	altlinux-network-telephony-tools.directory.in		\
	altlinux-network-video-conference.directory.in		\
	altlinux-network-web-development.directory.in		\
	altlinux-office.directory.in		\
	altlinux-office-other.directory.in		\
	altlinux-office-publishing.directory.in		\
	altlinux-office-viewer.directory.in		\
	altlinux-office-calendar.directory.in		\
	altlinux-office-finance.directory.in		\
	altlinux-office-presentation.directory.in		\
	altlinux-office-spreadsheet.directory.in		\
	altlinux-office-wordprocessor.directory.in		\
	altlinux-office-database.directory.in		\
	altlinux-office-mail.directory.in		\
	altlinux-office-project-management.directory.in		\
	altlinux-office-pda.directory.in		\
	altlinux-office-contact-management.directory.in		\
	altlinux-office-dictionary.directory.in		\
	altlinux-office-chart.directory.in		\
	altlinux-office-flowchart.directory.in		\
	altlinux-office-photography.directory.in		\
	altlinux-science.directory.in		\
	altlinux-science-other.directory.in		\
	altlinux-science-astronomy.directory.in		\
	altlinux-science-biology.directory.in		\
	altlinux-science-chemistry.directory.in		\
	altlinux-science-computer-science.directory.in		\
	altlinux-science-geoscience.directory.in		\
	altlinux-science-mathematics.directory.in		\
	altlinux-science-physics.directory.in		\
	altlinux-science-geology.directory.in		\
	altlinux-science-artificial-intelligence.directory.in		\
	altlinux-science-electricity.directory.in		\
	altlinux-science-data-visualization.directory.in		\
	altlinux-science-image-processing.directory.in		\
	altlinux-science-numerical-analysis.directory.in		\
	altlinux-science-robotics.directory.in		\
	altlinux-science-parallel-computing.directory.in		\
	altlinux-science-medical-software.directory.in		\
	altlinux-development.directory.in		\
	altlinux-development-other.directory.in		\
	altlinux-development-web-development.directory.in		\
	altlinux-development-database.directory.in		\
	altlinux-development-debugging.directory.in		\
	altlinux-development-ide.directory.in		\
	altlinux-development-building.directory.in		\
	altlinux-development-profiling.directory.in		\
	altlinux-development-revision-control.directory.in		\
	altlinux-development-interfacedesign.directory.in		\
	altlinux-development-translation.directory.in		\
	altlinux-development-project-management.directory.in		\
	altlinux-multimedia.directory.in		\
	altlinux-multimedia-other.directory.in		\
	altlinux-multimedia-audio.directory.in		\
	altlinux-multimedia-video.directory.in		\
	altlinux-multimedia-midi.directory.in		\
	altlinux-multimedia-mixer.directory.in		\
	altlinux-multimedia-sequencer.directory.in		\
	altlinux-multimedia-database.directory.in		\
	altlinux-multimedia-music.directory.in		\
	altlinux-multimedia-audio-player.directory.in		\
	altlinux-multimedia-video-player.directory.in		\
	altlinux-multimedia-player.directory.in		\
	altlinux-multimedia-audio-recorder.directory.in		\
	altlinux-multimedia-video-recorder.directory.in		\
	altlinux-multimedia-recorder.directory.in		\
	altlinux-multimedia-tuner.directory.in		\
	altlinux-multimedia-tv.directory.in		\
	altlinux-network-ham-radio.directory.in		\
	altlinux-multimedia-audio-editing.directory.in		\
	altlinux-multimedia-video-editing.directory.in		\
	altlinux-multimedia-editing.directory.in		\
	altlinux-multimedia-disc-burning.directory.in		\
	altlinux-graphics.directory.in		\
	altlinux-graphics-other.directory.in		\
	altlinux-graphics-2d.directory.in		\
	altlinux-graphics-3d.directory.in		\
	altlinux-graphics-vector.directory.in		\
	altlinux-graphics-raster.directory.in		\
	altlinux-graphics-publishing.directory.in		\
	altlinux-graphics-scanning.directory.in		\
	altlinux-graphics-scanning-ocr.directory.in		\
	altlinux-graphics-photography.directory.in		\
	altlinux-graphics-viewer.directory.in		\
	altlinux-electronics.directory.in		\
	altlinux-engineering.directory.in		\
	altlinux-education.directory.in		\
	altlinux-education-other.directory.in		\
	altlinux-education-language.directory.in		\
	altlinux-education-mathematics.directory.in		\
	altlinux-education-science.directory.in		\
	altlinux-education-astronomy.directory.in		\
	altlinux-education-biology.directory.in		\
	altlinux-education-chemistry.directory.in		\
	altlinux-education-computer-science.directory.in		\
	altlinux-education-geoscience.directory.in		\
	altlinux-education-physics.directory.in		\
	altlinux-education-geology.directory.in		\
	altlinux-education-music.directory.in		\
	altlinux-education-art.directory.in		\
	altlinux-education-history.directory.in		\
	altlinux-education-literature.directory.in		\
	altlinux-education-geography.directory.in		\
	altlinux-education-sports.directory.in		\
	altlinux-education-electricity.directory.in		\
	altlinux-education-construction.directory.in		\
	altlinux-education-economy.directory.in		\
	altlinux-education-robotics.directory.in		\
	altlinux-education-artificial-intelligence.directory.in		\
	altlinux-education-data-visualization.directory.in		\
	altlinux-education-image-processing.directory.in		\
	altlinux-education-numerical-analysis.directory.in		\
	altlinux-education-medical-software.directory.in		\
	altlinux-education-parallel-computing.directory.in		\
	altlinux-utility.directory.in		\
	altlinux-utility-other.directory.in		\
	altlinux-utility-file-tools.directory.in		\
	altlinux-utility-archiving.directory.in		\
	altlinux-utility-archiving-compression.directory.in		\
	altlinux-utility-text-tools.directory.in		\
	altlinux-utility-text-editor.directory.in		\
	altlinux-utility-accessibility.directory.in		\
	altlinux-utility-telephony-tools.directory.in		\
	altlinux-utility-calculator.directory.in		\
	altlinux-utility-clock.directory.in		\
	altlinux-system.directory.in		\
	altlinux-system-other.directory.in		\
	altlinux-system-emulators.directory.in		\
	altlinux-system-file-tools.directory.in		\
	altlinux-system-file-managers.directory.in		\
	altlinux-system-filesystem.directory.in		\
	altlinux-system-monitoring.directory.in		\
	altlinux-system-terminals.directory.in		\
	altlinux-system-security.directory.in		\
	altlinux-settings-desktop.directory.in		\
	altlinux-settings-other.directory.in		\
	altlinux-settings-package-manager.directory.in		\
	altlinux-settings-hardware-settings.directory.in		\
	altlinux-settings-hardware-settings-printing.directory.in		\
	altlinux-settings-accessibility.directory.in		\
	altlinux-settings-security.directory.in		\
	altlinux-settings-network.directory.in		\
	altlinux-settings-system.directory.in		\
	altlinux-settings-desktop-settings.directory.in		\
	altlinux-settings-personal.directory.in		\
	altlinux-documentation.directory.in		\
	altlinux-artificial-intelligence.directory.in		\
	altlinux-electricity.directory.in		\
	altlinux-data-visualization.directory.in		\
	altlinux-image-processing.directory.in		\
	altlinux-numerical-analysis.directory.in		\
	altlinux-robotics.directory.in		\
	altlinux-parallel-computing.directory.in		\
	altlinux-mathematics.directory.in		\
	altlinux-astronomy.directory.in		\
	altlinux-biology.directory.in		\
	altlinux-chemistry.directory.in		\
	altlinux-computer-science.directory.in		\
	altlinux-geoscience.directory.in		\
	altlinux-physics.directory.in		\
	altlinux-geology.directory.in		\
	altlinux-music.directory.in		\
	altlinux-photography.directory.in		\
	altlinux-viewer.directory.in		\
	altlinux-web-development.directory.in		\
	altlinux-ham-radio.directory.in		\
	altlinux-telephony-tools.directory.in		\
	altlinux-mail.directory.in		\
	altlinux-database.directory.in		\
	altlinux-publishing.directory.in		\
	altlinux-project-management.directory.in		\
	altlinux-file-tools.directory.in		\
	altlinux-other.directory.in		\
	altlinux-applications.directory.in		\
	altlinux-screensaver.directory.in		\
	altlinux-java.directory.in		\
	altlinux-xfce.directory.in		\
	altlinux-gnome.directory.in		\
	altlinux-kde.directory.in		\
	altlinux-lxde.directory.in		\
	altlinux-rox.directory.in		\
	altlinux-multimedia-tv-and-radio.directory.in		\
	altlinux-internet.directory.in		\
	altlinux-settings-java.directory.in		\
	altlinux-settings-xfce.directory.in		\
	altlinux-settings-gnome.directory.in		\
	altlinux-settings-kde.directory.in		\
	altlinux-settings-lxde.directory.in		\
	altlinux-settings-rox.directory.in		\
	altlinux-system-tools.directory.in		\
	$(NULL)

directory_DATA = $(directory_in_files:.directory.in=.directory)

EXTRA_DIST= $(directory_in_files)

DISTCLEANFILES = $(directory_DATA)
