NULL =

menudir = $(sysconfdir)/xdg/menus

menu_DATA =					\
	altlinux-applications-nested.menu	\
	altlinux-applications-shallow.menu	\
	altlinux-applications-shallow-gnomish.menu	\
	altlinux-development.menu		\
	altlinux-education.menu			\
	altlinux-games.menu			\
	altlinux-graphics.menu			\
	altlinux-multimedia.menu		\
	altlinux-network.menu			\
	altlinux-office.menu			\
	altlinux-science.menu			\
	altlinux-settings.menu			\
	altlinux-system.menu			\
	altlinux-utility.menu			\
	lxde-applications.menu			\
	xfce-applications.menu			\
	kde3-applications.menu			\
	gnome-applications.menu			\
	settings.menu				\
	$(NULL)

EXTRA_DIST= $(menu_DATA)
