NULL =

menudir = $(sysconfdir)/xdg/menus

menu_DATA =					\
	altlinux-applications-nested.menu	\
	altlinux-applications-shallow.menu	\
	altlinux-development.menu		\
	altlinux-education.menu			\
	altlinux-games.menu			\
	altlinux-graphics.menu			\
	altlinux-multimedia.menu		\
	altlinux-network.menu			\
	altlinux-office.menu			\
	altlinux-science.menu			\
	altlinux-settings.menu			\
	altlinux-system.menu			\
	altlinux-utility.menu			\
	applications.menu			\
	enlightenment-applications.menu		\
	enlightenment.menu			\
	gnome3-applications.menu		\
	kde3-applications.menu			\
	lxde-applications.menu			\
	mate-applications.menu			\
	xfce-applications.menu			\
	cinnamon-applications.menu		\
	mate-settings.menu			\
	cinnamon-settings.menu			\
	$(NULL)

EXTRA_DIST= $(menu_DATA)
